src/test/resources/public/input/typechecking/fail/incompatible_condition/fail04.jova
class Main {

  public int main() {
    string test;
    test = "someteststring";
	
    while(test){
      print("Some words...")
    }
    return 0;
  }

}